test column 2 row

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.data.elasticsearch.cluster-nodes=106.12.10.241:9300
 
+# JPA œ‡πÿ≈‰÷√
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
